Forgot to color strainer base lore